now the check reflects on the ui

--- a/ep01.html
+++ b/ep01.html
@@ -22,6 +22,7 @@
     <div class="number-pool" id="numberPool"></div>
     <p></p>
     <button id="bCheck" disabled>Enviar</button>
+    <p id="pFinalResult"></p>
 
     <script type="text/javascript" src="ep01.js"></script>
 </body>
